--- a/sass/style.css
+++ b/sass/style.css
@@ -2,15 +2,15 @@
   position: relative;
   overflow: hidden; }
   #visual .image-slide .slide {
-    height: 450px;
-    margin-bottom: 15px; }
+    height: 480px; }
     #visual .image-slide .slide li {
       background: url(../img/main/m/visual01.jpg) no-repeat top center;
-      height: 450px;
+      height: 480px;
       width: 100%;
       position: absolute;
       left: 0;
-      top: 0; }
+      top: 0;
+      z-index: -1; }
       #visual .image-slide .slide li:nth-child(2) {
         background-image: url(../img/main/m/visual02.jpg); }
       #visual .image-slide .slide li:nth-child(3) {
@@ -21,6 +21,9 @@
           color: #bebebe; }
       #visual .image-slide .slide li:nth-child(5) {
         background-image: url(../img/main/m/visual05.jpg); }
+      #visual .image-slide .slide li a {
+        display: block;
+        height: 100%; }
       #visual .image-slide .slide li:first-child .visual_text p:first-child {
         width: 100%; }
       #visual .image-slide .slide li .visual_text {
@@ -32,22 +35,41 @@
           font-size: 15px;
           line-height: 1.5;
           color: #303030;
-          margin-bottom: 15px; }
+          margin-bottom: 15px;
+          height: 45px;
+          overflow: hidden;
+          box-sizing: border-box;
+          padding-top: 45px;
+          transition: 0.5s padding 0.3s; }
           #visual .image-slide .slide li .visual_text p:first-child {
             width: 65%;
-            margin: 0 auto 15px; }
+            margin: 0 auto 15px;
+            height: 100px; }
           #visual .image-slide .slide li .visual_text p img {
-            width: 100%; }
+            width: 100%;
+            padding-top: 100px;
+            transition: 0.5s padding 0.3s; }
+      #visual .image-slide .slide li:nth-child(3) a .visual_text p img {
+        width: 84%; }
+      #visual .image-slide .slide li.on {
+        z-index: 0; }
+        #visual .image-slide .slide li.on a .visual_text p {
+          padding-top: 0px; }
+          #visual .image-slide .slide li.on a .visual_text p:first-child img {
+            padding-top: 0px; }
   #visual .image-slide .indicator {
-    margin: 0 auto 20px;
-    width: 130px; }
+    width: 130px;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 15px; }
     #visual .image-slide .indicator li {
       float: left;
       width: 12px;
       height: 12px;
       border-radius: 100px;
       overflow: hidden;
-      background: #c7c7c7;
+      background: #ffffff;
       position: relative; }
       #visual .image-slide .indicator li + li {
         margin-left: 8px; }
@@ -63,7 +85,8 @@
       #visual .image-slide .indicator li.on {
         width: 50px; }
         #visual .image-slide .indicator li.on a {
-          background: #ffae76; }
+          background: #ffae76;
+          animation: dot-line linear 3s; }
   #visual .image-slide .control div a {
     position: absolute;
     top: 35%; }
@@ -87,7 +110,7 @@
       line-height: 23px;
       border: 1px solid #d3d3d3;
       text-align: center;
-      color: #b4b4b4; }
+      color: #fff; }
       #visual .image-slide .control a.play i.fa-play {
         display: block; }
       #visual .image-slide .control a.play i.fa-pause {
@@ -100,13 +123,249 @@
     #visual .image-slide .control a.play.on i.fa-pause {
       display: block; }
 
-/*@keyframes dot-line {
-	0% {
-		width: 10px;
-	}
-	100% {
-		width: 100%;
-	}
-}*/
+#story {
+  background: #890010;
+  text-align: center;
+  padding: 60px 0 50px;
+  margin-bottom: 50px; }
+  #story h2 {
+    font-size: 17px;
+    color: #e1e1e1;
+    font-weight: normal;
+    margin-bottom: 30px;
+    letter-spacing: -1px; }
+    #story h2 span {
+      font-family: 'Source Sans Pro', sans-serif;
+      letter-spacing: 1px;
+      font-size: 37px;
+      color: #fff;
+      font-weight: 800;
+      padding-top: 10px; }
+  #story .text p {
+    font-size: 15px;
+    color: #dcdcdc;
+    width: 70%;
+    margin: 0 auto 25px;
+    word-break: keep-all; }
+  #story .text a {
+    display: block;
+    width: 115px;
+    line-height: 40px;
+    text-align: center;
+    border: solid 2px #fff;
+    font-size: 13px;
+    color: #fff;
+    margin: 0 auto;
+    transition: all 0.5s; }
+    #story .text a:hover {
+      background: #fff;
+      color: #890010; }
+
+#menu h2, #sns h2, #store h2 {
+  font-family: 'Source Sans Pro', sans-serif;
+  letter-spacing: 1px;
+  font-size: 30px;
+  color: #303030;
+  font-weight: 800;
+  text-align: center;
+  margin-bottom: 20px;
+  height: 32px;
+  box-sizing: border-box;
+  overflow: hidden;
+  padding-top: 30px;
+  transition: padding 0.3s; }
+  #menu h2.on, #sns h2.on, #store h2.on {
+    padding-top: 0px;
+    font-weight: bolder; }
+
+#menu ul.menu_img {
+  width: 370px;
+  margin: 0 auto 15px; }
+  #menu ul.menu_img li {
+    float: left; }
+    #menu ul.menu_img li a {
+      display: block;
+      width: 179px;
+      margin: 3px;
+      height: 120px;
+      background: url(../img/main/menu_img01.jpg) no-repeat left 250px;
+      background-size: 100%;
+      transition: background 0.8s;
+      overflow: hidden; }
+      #menu ul.menu_img li a.on {
+        background-position: left top; }
+      #menu ul.menu_img li a h3 {
+        font-family: 'Montserrat', sans-serif;
+        letter-spacing: 1px;
+        font-size: 18px;
+        color: #4c4642;
+        padding: 15px;
+        transform: translateY(-35px);
+        transition: transform 0.8s; }
+        #menu ul.menu_img li a h3.on {
+          transform: translateY(0); }
+      #menu ul.menu_img li a p {
+        display: none; }
+    #menu ul.menu_img li.m_long a {
+      height: 246px; }
+    #menu ul.menu_img li.wide a {
+      width: 364px; }
+    #menu ul.menu_img li:nth-child(2) h3, #menu ul.menu_img li:nth-child(5) h3, #menu ul.menu_img li:nth-child(6) h3 {
+      text-align: right; }
+    #menu ul.menu_img li:nth-child(2) a {
+      background-image: url(../img/main/menu_img02.jpg); }
+    #menu ul.menu_img li:nth-child(3) a {
+      background-image: url(../img/main/menu_img03.jpg); }
+    #menu ul.menu_img li:nth-child(4) a {
+      background-image: url(../img/main/menu_img04.jpg); }
+    #menu ul.menu_img li:nth-child(5) a {
+      background-image: url(../img/main/menu_img05.jpg); }
+    #menu ul.menu_img li:nth-child(6) a {
+      background-image: url(../img/main/menu_img06.jpg); }
+
+#sns {
+  background: url(../img/main/story_bg_71.jpg) no-repeat;
+  background-size: 220%;
+  padding: 25px 0 20px;
+  margin-bottom: 30px; }
+  #sns ul.sns_list02 {
+    margin: 0 auto 20px;
+    width: 206px; }
+    #sns ul.sns_list02 li {
+      float: left; }
+      #sns ul.sns_list02 li + li {
+        margin-left: 10px; }
+      #sns ul.sns_list02 li a {
+        display: block;
+        width: 42px;
+        border: solid 1px #ac8661;
+        background-color: rgba(255, 255, 255, 0.5);
+        border-radius: 100px;
+        text-align: center;
+        overflow: hidden;
+        transform: scale(0); }
+        #sns ul.sns_list02 li a.on {
+          transform: scale(1); }
+        #sns ul.sns_list02 li a i {
+          font-size: 19px;
+          line-height: 42px;
+          color: #831f2b; }
+          #sns ul.sns_list02 li a i span {
+            position: absolute;
+            text-indent: -9999px; }
+        #sns ul.sns_list02 li a.on i {
+          transform: rotate(360deg); }
+  #sns div.inner_s {
+    height: 125px;
+    position: relative; }
+    #sns div.inner_s div.banner_slide {
+      margin: 0 20px;
+      overflow-x: scroll;
+      scrollbar-arrow-color: #dedede;
+      scrollbar-Face-Color: #ffa62d;
+      scrollbar-Shadow-Color: #dedede;
+      -ms-overflow-style: -ms-autohiding-scrollbar; }
+      #sns div.inner_s div.banner_slide::-webkit-scrollbar {
+        height: 7px; }
+      #sns div.inner_s div.banner_slide::-webkit-scrollbar-thumb {
+        background: #ffa62d; }
+      #sns div.inner_s div.banner_slide::-webkit-scrollbar-track {
+        background: #dedede; }
+      #sns div.inner_s div.banner_slide::-webkit-scrollbar-button {
+        display: none; }
+      #sns div.inner_s div.banner_slide li {
+        float: left; }
+        #sns div.inner_s div.banner_slide li a {
+          display: block;
+          height: 100%;
+          width: 125px; }
+          #sns div.inner_s div.banner_slide li a img {
+            width: 100%;
+            vertical-align: top; }
+    #sns div.inner_s div.control a {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      width: 30px;
+      text-align: center;
+      background: #fff;
+      border-radius: 100px; }
+      #sns div.inner_s div.control a.prev {
+        left: 5px; }
+      #sns div.inner_s div.control a.next {
+        right: 5px; }
+      #sns div.inner_s div.control a i {
+        font-size: 15px;
+        line-height: 30px; }
+        #sns div.inner_s div.control a i span {
+          position: absolute;
+          text-indent: -9999px; }
+
+#store article {
+  width: 90%;
+  height: 140px;
+  margin: 0 auto 5px;
+  background: url(../img/main/store_btn01.jpg) no-repeat;
+  background-size: 100%;
+  text-align: center; }
+  #store article:nth-of-type(1) {
+    padding-top: 28px;
+    box-sizing: border-box; }
+    #store article:nth-of-type(1) h3 {
+      color: #fff;
+      font-size: 17px;
+      margin-bottom: 15px; }
+    #store article:nth-of-type(1) p {
+      display: none; }
+    #store article:nth-of-type(1) .store_form {
+      width: 270px;
+      margin: 0 auto;
+      position: relative; }
+      #store article:nth-of-type(1) .store_form label {
+        position: absolute;
+        left: -9999px; }
+      #store article:nth-of-type(1) .store_form input {
+        width: 100%;
+        height: 30px;
+        background: rgba(0, 0, 0, 0.8);
+        border: 1px solid #fff;
+        box-sizing: border-box;
+        padding: 0 25px 0 10px;
+        color: #fff; }
+      #store article:nth-of-type(1) .store_form a {
+        color: #fff;
+        position: absolute;
+        right: 5px;
+        top: 3px; }
+        #store article:nth-of-type(1) .store_form a span {
+          position: absolute;
+          text-indent: -9999px; }
+  #store article:nth-of-type(2) {
+    background-image: url(../img/main/m/store_btn02.jpg);
+    padding-top: 20px;
+    box-sizing: border-box;
+    margin-bottom: 35px; }
+    #store article:nth-of-type(2) h3 {
+      color: #de132a;
+      font-size: 17px;
+      margin-bottom: 10px; }
+    #store article:nth-of-type(2) p.btn_text {
+      font-size: 14px;
+      color: #c7c7c7;
+      margin-bottom: 15px; }
+    #store article:nth-of-type(2) p.more {
+      width: 100px;
+      border: 2px solid #fff;
+      color: #fff;
+      font-size: 11px;
+      line-height: 30px;
+      text-align: center;
+      margin: 0 auto; }
+
+@keyframes dot-line {
+  0% {
+    width: 12px; }
+  100% {
+    width: 100%; } }
 
 /*# sourceMappingURL=style.css.map */
