--- a/sass/common.css
+++ b/sass/common.css
@@ -118,7 +118,42 @@ header {
     header article.gnb nav ul.menu_list > li.on ul {
       max-height: 100%; }
 
+footer {
+  border-top: 2px solid #950032;
+  background: #1d1d1d;
+  padding: 30px 10px; }
+  footer div.logo {
+    display: none; }
+  footer div.foot_content {
+    text-align: center; }
+    footer div.foot_content aside a {
+      margin-right: 4px;
+      padding-left: 5px;
+      font-size: 13px;
+      color: #b2b2b2;
+      word-break: keep-all;
+      background: url(../img/main/foot_bar.jpg) no-repeat left center; }
+      footer div.foot_content aside a:first-child {
+        padding-left: 0;
+        background: none; }
+    footer div.foot_content address p {
+      padding-top: 10px;
+      font-size: 13px;
+      color: #8c8c8c;
+      font-style: normal; }
+      footer div.foot_content address p span {
+        letter-spacing: 1px; }
+
 @media screen and (max-width: 640px) {
+  header article.top_header ul.sns_list {
+    display: none; }
+
+  header article.top_header form {
+    display: none; }
+
+  footer .foot_btn {
+    display: none; } }
+@media screen and (min-width: 641px) and (max-width: 1024px) {
   header article.top_header ul.sns_list {
     display: none; }
 
