--- a/sass/style.scss
+++ b/sass/style.scss
@@ -6,30 +6,39 @@
 }
 
 //visual
+$lineHeight : 12px;
+
 #visual .image-slide {position: relative;overflow: hidden;
-	.slide {height:450px;margin-bottom: 15px;
-		li {background: url(../img/main/m/visual01.jpg)no-repeat top center;height: 450px;width: 100%; position: absolute;left: 0;top: 0;
+	.slide {height:480px;
+		li {background: url(../img/main/m/visual01.jpg)no-repeat top center;height: 480px;width: 100%; position: absolute;left: 0;top: 0;z-index: -1;
 			&:nth-child(2) {background-image: url(../img/main/m/visual02.jpg);}
 			&:nth-child(3) {background-image: url(../img/main/m/visual03.jpg);}
 			&:nth-child(4) {background-image: url(../img/main/m/visual04.jpg);
 				.visual_text p {color: #bebebe;}
 			}
 			&:nth-child(5) {background-image: url(../img/main/m/visual05.jpg);}
+			a {display: block;height: 100%;}
 			&:first-child .visual_text p:first-child {width: 100%;}
 			.visual_text {padding-top: 25px;text-align: center;width: 300px;margin: 0 auto;
-				p {font-size: 15px;line-height: 1.5;color: #303030;margin-bottom: 15px;
-					&:first-child {width: 65%;margin: 0 auto 15px;}
-					img {width: 100%;}
+				p {font-size: 15px;line-height: 1.5;color: #303030;margin-bottom: 15px;height: 45px;overflow: hidden;box-sizing: border-box;padding-top: 45px;transition: 0.5s padding 0.3s;
+					&:first-child {width: 65%;margin: 0 auto 15px;height: 100px;}
+					img {width: 100%;padding-top: 100px;transition:  0.5s padding 0.3s;}
+				}
+			}
+			&:nth-child(3) a .visual_text p img {width: 84%}
+			&.on {z-index: 0;
+				a .visual_text p {padding-top: 0px;
+					&:first-child img {padding-top: 0px}
 				}
 			}
 		}
 	}
-	.indicator {margin: 0 auto 20px;width: 130px;
-		li {float: left;width: 12px;height: 12px;border-radius: 100px;overflow: hidden;background: #c7c7c7;position: relative;
+	.indicator {width: 130px;position: absolute;left: 50%;transform: translateX(-50%);bottom: 15px;
+		li {float: left;width: $lineHeight;height: $lineHeight;border-radius: 100px;overflow: hidden;background: #ffffff;position: relative;
 			+li {margin-left: 8px;}
-			a {display: block;text-indent: -9999px;width: 12px;height: 12px;border-radius: 100px;position: absolute;left: 0;top: 0; }
+			a {display: block;text-indent: -9999px;width: $lineHeight;height: $lineHeight;border-radius: 100px;position: absolute;left: 0;top: 0; }
 			&.on {width: 50px;
-				a {background: #ffae76;}
+				a {background: #ffae76;animation: dot-line linear 3s;}
 			}
 		}
 	}
@@ -41,7 +50,7 @@
 		div a i {font-size: 50px;color: #fff;}
 		div a span {position: absolute;text-indent: -9999px}
 		a.play {position: absolute;right: 10px;bottom: 10px;
-			i {font-size: 18px;width: 23px;line-height: 23px;border: 1px solid #d3d3d3;text-align: center;color: #b4b4b4;
+			i {font-size: 18px;width: 23px;line-height: 23px;border: 1px solid #d3d3d3;text-align: center;color: #fff;
 				&.fa-play {display: block;}
 				&.fa-pause {display: none;}
 			}
@@ -54,12 +63,117 @@
 	}
 }
 
+//story
+#story {background: #890010;text-align: center;padding:60px 0 50px;margin-bottom: 50px;
+	h2 {font-size: 17px;color: #e1e1e1;font-weight: normal;margin-bottom: 30px;letter-spacing: -1px;
+		span {@include Source(37px,#fff);font-weight: 800;padding-top: 10px;}
+	}
+	.text {
+		p {font-size: 15px;color:#dcdcdc;width: 70%;margin: 0 auto 25px;word-break: keep-all;}
+		a {display: block;width: 115px;line-height: 40px;text-align: center; border: solid 2px #fff;font-size: 13px;color: #fff;margin: 0 auto;transition: all 0.5s;
+			&:hover {background: #fff;color: #890010;}
+		}
+	}
+}
 
-/*@keyframes dot-line {
+#menu h2,#sns h2 ,#store h2 {@include Source(30px,#303030);font-weight: 800;text-align: center;margin-bottom: 20px;height: 32px;box-sizing: border-box;overflow: hidden;padding-top: 30px;transition: padding 0.3s;
+	&.on {padding-top: 0px;font-weight: bolder;}
+}
+
+//menu
+#menu ul.menu_img {width: 370px;margin: 0 auto 15px;
+	li {float: left;
+		a {display: block;width: 179px;margin: 3px;height: 120px;background: url(../img/main/menu_img01.jpg) no-repeat left 250px;background-size: 100%;transition: background 0.8s;overflow: hidden;
+			&.on {background-position: left top;}
+			h3 {@include Montserrat (18px,#4c4642);padding: 15px;transform: translateY(-35px);transition: transform 0.8s;
+				&.on {transform: translateY(0);}
+			}
+			p {display: none;}
+		}
+		&.m_long a {height:246px;}
+		&.wide a {width: 364px;}
+		&:nth-child(2) h3,&:nth-child(5) h3,,&:nth-child(6) h3 {text-align: right;}
+		&:nth-child(2) a {background-image: url(../img/main/menu_img02.jpg);}
+		&:nth-child(3) a {background-image: url(../img/main/menu_img03.jpg);}
+		&:nth-child(4) a {background-image: url(../img/main/menu_img04.jpg);}
+		&:nth-child(5) a {background-image: url(../img/main/menu_img05.jpg);}
+		&:nth-child(6) a {background-image: url(../img/main/menu_img06.jpg);}
+	}
+}
+
+#sns {background: url(../img/main/story_bg_71.jpg) no-repeat ;background-size: 220%;padding:25px 0 20px;margin-bottom: 30px;
+	ul.sns_list02 {margin: 0 auto 20px;width: 206px;
+		li {float: left;
+			+li {margin-left: 10px}
+			a {display: block;width: 42px;border: solid 1px #ac8661;background-color: rgba(255, 255, 255, 0.5);border-radius: 100px;text-align: center;overflow: hidden;transform: scale(0);
+				&.on {transform: scale(1);}
+				i {font-size: 19px;line-height: 42px;color: #831f2b;
+					span {position: absolute;text-indent: -9999px;}
+				}
+				&.on i {transform: rotate(360deg);}
+			}
+		}
+	}
+	div.inner_s {height: 125px;position: relative;
+		div.banner_slide {margin:0 20px ;overflow-x: scroll;scrollbar-arrow-color: #dedede;scrollbar-Face-Color: #ffa62d;scrollbar-Shadow-Color: #dedede;-ms-overflow-style: -ms-autohiding-scrollbar;
+		&::-webkit-scrollbar {height: 7px;}
+		&::-webkit-scrollbar-thumb {background: #ffa62d;}
+		&::-webkit-scrollbar-track {background: #dedede;}
+		&::-webkit-scrollbar-button {display: none;}
+			li{float: left;
+				a {display: block;height: 100%;width: 125px;
+					img {width: 100%;vertical-align: top;}
+				}
+			}
+		}
+		div.control a {position: absolute;top: 50%;transform: translateY(-50%);width: 30px;text-align: center;background: #fff;border-radius: 100px;
+			&.prev {left: 5px;}
+			&.next {right: 5px;}
+			i {font-size: 15px;line-height: 30px;
+				span {position: absolute;text-indent: -9999px}
+			}
+		}
+	}
+}
+
+#store article {width: 90%;height: 140px; margin: 0 auto 5px;background: url(../img/main/store_btn01.jpg) no-repeat; background-size: 100%;text-align: center;
+	&:nth-of-type(1) {padding-top: 28px;box-sizing: border-box;
+		h3 {color: #fff;font-size: 17px;margin-bottom: 15px;}
+		p {display: none;}
+		.store_form {width: 270px;margin: 0 auto;position: relative;
+			label {position: absolute; left: -9999px}
+			input {width: 100%;height:30px;background: rgba(0,0,0,0.8);border: 1px solid #fff; box-sizing: border-box;padding: 0 25px 0 10px;color: #fff;}
+			a {color: #fff;position: absolute;right: 5px;top: 3px;
+				span {position: absolute;text-indent: -9999px}
+			}
+		}
+	}
+	&:nth-of-type(2) {background-image: url(../img/main/m/store_btn02.jpg);padding-top: 20px;box-sizing: border-box;margin-bottom: 35px;
+		h3 {color: #de132a;font-size: 17px;margin-bottom: 10px;}
+		p.btn_text {font-size: 14px;color: #c7c7c7;margin-bottom: 15px;}
+		p.more {width: 100px;border: 2px solid #fff;color: #fff;font-size: 11px;line-height: 30px;text-align: center;margin: 0 auto}
+	}
+}
+
+
+@media screen and (max-width:640px) {
+	
+}
+@media screen and (min-width:641px) and (max-width:1024px) {
+	
+}
+@media screen and (min-width:1025px) {
+	
+}
+
+
+
+
+@keyframes dot-line {
 	0% {
-		width: 10px;
+		width: $lineHeight ;
 	}
 	100% {
 		width: 100%;
 	}
-}*/
+}
